--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.topodroid.Cave3D"
-      android:versionCode="301023"
-      android:versionName="3.1.23">
+      android:versionCode="301026"
+      android:versionName="3.1.26">
     <uses-sdk
        android:minSdkVersion="8"
        android:targetSdkVersion="8"
     />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />  
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />  
     <application
           android:label="@string/app_name"
           android:icon="@drawable/icon">
