--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.topodroid.Cave3D"
-      android:versionCode="301038"
-      android:versionName="3.1.38">
+      android:versionCode="301041"
+      android:versionName="3.1.41">
     <uses-sdk
        android:minSdkVersion="8"
        android:targetSdkVersion="8"
@@ -11,7 +11,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />  
     <application
           android:label="@string/app_name"
-          android:icon="@drawable/icon">
+          android:icon="@drawable/icon"
+        >
+        <!-- android:resizeableActivity="true" -->
         <activity android:name=".Cave3D"
                   android:theme="@style/Theme.FullScreen"
                   android:label="@string/app_name">
