--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.topodroid.Cave3D"
-      android:versionCode="301041"
-      android:versionName="3.1.41">
+      android:versionCode="301042"
+      android:versionName="3.1.42">
     <uses-sdk
        android:minSdkVersion="8"
        android:targetSdkVersion="8"
@@ -10,40 +10,46 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />  
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />  
     <application
-          android:label="@string/app_name"
-          android:icon="@drawable/icon"
-        >
-        <!-- android:resizeableActivity="true" -->
-        <activity android:name=".Cave3D"
-                  android:theme="@style/Theme.FullScreen"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="Cave3D.intent.action.Launch" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <meta-data android:name="android.app.default_searchable"
-                       android:value=".Cave3DSearch" />
-        </activity>
+      android:label="@string/app_name"
+      android:icon="@drawable/icon"
+      >
+      <!-- 
+      android:debuggable="true"
+      android:resizeableActivity="true" 
+      android:largeHeap="true" 
+      android:vmSafeMode="true"
+      -->
 
-        <activity android:name=".Cave3DPreferences"
-                  android:label="@string/app_name">
-        </activity>
+      <activity android:name=".Cave3D"
+                android:theme="@style/Theme.FullScreen"
+                android:label="@string/app_name">
+        <intent-filter>
+              <action android:name="android.intent.action.MAIN" />
+              <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        <intent-filter>
+              <action android:name="Cave3D.intent.action.Launch" />
+              <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+        <meta-data android:name="android.app.default_searchable"
+                   android:value=".Cave3DSearch" />
+      </activity>
 
-        <activity android:name=".Cave3DOpenFileDialog"
-                  android:label="@string/app_name">
-        </activity>
+      <activity android:name=".Cave3DPreferences"
+                android:label="@string/app_name">
+      </activity>
 
-        <!-- activity android:name=".Cave3DSearch" >
-          <intent-filter>
-            <action android:name="android.intent.action.SEARCH" />
-          </intent-filter>
-          <meta-data android:name="android.app.searchable"
-                     android:resource="@xml/searchable"/>
-        </activity -->
+      <activity android:name=".Cave3DOpenFileDialog"
+                android:label="@string/app_name">
+      </activity>
+
+      <!-- activity android:name=".Cave3DSearch" >
+        <intent-filter>
+          <action android:name="android.intent.action.SEARCH" />
+        </intent-filter>
+        <meta-data android:name="android.app.searchable"
+                   android:resource="@xml/searchable"/>
+      </activity -->
 
     </application>
 </manifest> 
