--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.topodroid.Cave3D"
-      android:versionCode="301050"
-      android:versionName="3.1.50">
+      android:versionCode="301051"
+      android:versionName="3.1.51">
     <uses-sdk
        android:minSdkVersion="8"
        android:targetSdkVersion="8"
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />  
     <application
       android:label="@string/app_name"
+      android:screenOrientation="portrait"
       android:icon="@drawable/icon"
       >
       <!-- 
