--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.topodroid.Cave3D"
-      android:versionCode="301055"
-      android:versionName="3.1.55">
+      android:versionCode="301058"
+      android:versionName="3.1.58">
     <uses-sdk
        android:minSdkVersion="8"
        android:targetSdkVersion="8"
@@ -22,6 +22,7 @@
       -->
 
       <activity android:name=".Cave3D"
+                android:screenOrientation="portrait"
                 android:theme="@style/Theme.FullScreen"
                 android:label="@string/app_name">
         <intent-filter>
@@ -37,10 +38,12 @@
       </activity>
 
       <activity android:name=".Cave3DPreferences"
+                android:screenOrientation="portrait"
                 android:label="@string/app_name">
       </activity>
 
       <activity android:name=".Cave3DOpenFileDialog"
+                android:screenOrientation="portrait"
                 android:label="@string/app_name">
       </activity>
 
