--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.topodroid.Cave3D"
-      android:versionCode="301073"
-      android:versionName="3.1.73">
+      android:versionCode="301074"
+      android:versionName="3.1.74">
     <uses-sdk
        android:minSdkVersion="14"
        android:targetSdkVersion="28"
@@ -12,7 +12,7 @@
     <application
       android:label="@string/app_name"
       android:screenOrientation="portrait"
-      android:icon="@drawable/icon"
+      android:icon="@mipmap/ic_launcher"
       >
       <!-- 
       android:debuggable="true"
