--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.topodroid.Cave3D"
-      android:versionCode="400013"
-      android:versionName="4.0.13">
+      android:versionCode="400017"
+      android:versionName="4.0.17">
     <uses-sdk
        android:minSdkVersion="14"
        android:targetSdkVersion="29"
+       android:maxSdkVersion="29"
     />
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />  
