--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.topodroid.Cave3D"
-      android:versionCode="400018"
-      android:versionName="4.0.18">
+      android:versionCode="400019"
+      android:versionName="4.0.19">
     <uses-sdk
        android:minSdkVersion="14"
        android:targetSdkVersion="29"
@@ -11,6 +11,8 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />  
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />  
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
