--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.topodroid.Cave3D"
-      android:versionCode="400036"
-      android:versionName="4.0.36"
+      android:versionCode="400037"
+      android:versionName="4.0.37"
     >
     <uses-sdk
        android:minSdkVersion="14"
@@ -13,15 +13,16 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />  
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />  
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />  
     <!-- FIXME-GPS -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
-      android:requestLegacyExternalStorage="true"
       >
       <!-- 
+      android:requestLegacyExternalStorage="true"
       android:screenOrientation="portrait"
       android:debuggable="true"
       android:resizeableActivity="true" 
