--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.topodroid.Cave3D"
-      android:versionCode="400042"
-      android:versionName="4.0.42"
+      android:versionCode="401001"
+      android:versionName="4.1.1"
     >
     <uses-sdk
        android:minSdkVersion="14"
-       android:targetSdkVersion="29"
+       android:targetSdkVersion="30"
     />
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />  
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />  
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />  
+    <!-- uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" / -->  
+    <!-- uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" / -->  
     <!-- FIXME-GPS -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
